Add missing stuff

--- a/accomplishments/2015-01-week2.md
+++ b/accomplishments/2015-01-week2.md
@@ -19,6 +19,8 @@ Basically nothing, this week I've been way too busy, with a nice working sunday.
 
 ### Additional Things I Did:
 - [x] Checkout GYM options
+- [x] Finish [The best interface is no interface](https://www.goodreads.com/book/show/22758923-the-best-interface-is-no-interface?from_search=true&search_version=service)
+- [x] Checkout GitBook
 
 
 ## Next Week's Focus: Docker in Production
