--- a/accomplishments/2016-02-week4.md
+++ b/accomplishments/2016-02-week4.md
@@ -6,7 +6,7 @@
 - [x] Plan Android Study Jam Workshop
 
 ### Additional Things I Did:
-- [x] Experiments with Typscript
+- [x] Experiments with Typescript
 
 ## Next Week's Focus: Android
 
