--- a/accomplishments/2016-03-week3.md
+++ b/accomplishments/2016-03-week3.md
@@ -2,7 +2,7 @@
 
 ## This Week's Focus: Android
 
-## Things I didn't finish from the list
+## Things I Did From the List:
 - [x] Relax 💙
 
 ### Additional Things I Did:
